[gd_scene load_steps=38 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/statusesStack/pup-strength.png" type="Texture" id=2]
[ext_resource path="res://assets/Characters/Player/avatar.png" type="Texture" id=3]
[ext_resource path="res://assets/Gui/Barras/circle-bar.png" type="Texture" id=4]
[ext_resource path="res://assets/Gui/box-highres.png" type="Texture" id=5]
[ext_resource path="res://sfx/05 gaseous tethanus.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/GUI/joystick/Pad.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Gui/Barras/fill-stamina-02.png" type="Texture" id=8]
[ext_resource path="res://assets/Gui/Barras/fonde-barra-02.png" type="Texture" id=9]
[ext_resource path="res://assets/Gui/Barras/fill-health-02.png" type="Texture" id=10]
[ext_resource path="res://assets/Gui/Barras/fill-magic-02.png" type="Texture" id=11]
[ext_resource path="res://fonts/DePixelBreit.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/statusesStack/pup-speed.png" type="Texture" id=13]
[ext_resource path="res://assets/statusesStack/pup-stamine.png" type="Texture" id=14]
[ext_resource path="res://assets/joystick/js.png" type="Texture" id=15]
[ext_resource path="res://assets/MapElements/light.png" type="Texture" id=16]
[ext_resource path="res://fonts/TaylorGothic.otf" type="DynamicFontData" id=17]
[ext_resource path="res://scripts/Elements/LevelUp.gd" type="Script" id=18]
[ext_resource path="res://assets/Gui/Barras/hud_bg_without_custom_meter.png" type="Texture" id=19]
[ext_resource path="res://assets/Items/hp-stone-icon.png" type="Texture" id=20]
[ext_resource path="res://assets/Gui/Barras/hud_avatar_frame.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 1
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "gemIconAnimate"
loop = true
step = 0.05

[sub_resource type="DynamicFont" id=13]
size = 12
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=14]
size = 12
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 12 )

[sub_resource type="CircleShape2D" id=9]

[sub_resource type="DynamicFont" id=10]
size = 100
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 100 ]
}

[sub_resource type="Animation" id=12]
resource_name = "upd"
step = 0.0046729
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.96729 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 50, 80 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.934579 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end"
} ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ItemsSelector" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="slot_3" type="Sprite" parent="ItemsSelector"]
position = Vector2( 408, 125 )
rotation = -1.5708
scale = Vector2( 0.226236, 0.22119 )
texture = ExtResource( 4 )

[node name="item" type="Sprite" parent="ItemsSelector/slot_3"]
position = Vector2( 4.47015, 4.57043 )
rotation = 1.5708
scale = Vector2( 4.93798, 4.88267 )
texture = ExtResource( 20 )

[node name="frame" type="Sprite" parent="ItemsSelector/slot_3/item"]
position = Vector2( -0.914856, 0.936127 )
rotation = -1.5708
scale = Vector2( 0.76993, 0.775197 )
texture = ExtResource( 21 )

[node name="qty" type="Label" parent="ItemsSelector/slot_3/item"]
margin_left = 11.1079
margin_top = 8.6931
margin_right = 27.1079
margin_bottom = 22.6931
custom_fonts/font = SubResource( 15 )
text = "30"

[node name="slot_2" type="Sprite" parent="ItemsSelector"]
position = Vector2( 344, 125 )
rotation = -1.5708
scale = Vector2( 0.226236, 0.22119 )
texture = ExtResource( 4 )

[node name="item" type="Sprite" parent="ItemsSelector/slot_2"]
position = Vector2( 8.94104, -0.000488281 )
rotation = 1.5708
scale = Vector2( 4.93798, 4.88267 )
texture = ExtResource( 20 )

[node name="frame" type="Sprite" parent="ItemsSelector/slot_2/item"]
position = Vector2( 0.000427246, 0.946808 )
rotation = -1.5708
scale = Vector2( 0.76993, 0.775197 )
texture = ExtResource( 21 )

[node name="qty" type="Label" parent="ItemsSelector/slot_2/item"]
margin_left = 11.9112
margin_top = 8.58232
margin_right = 27.9112
margin_bottom = 22.5823
custom_fonts/font = SubResource( 16 )
text = "30"

[node name="slot_1" type="Sprite" parent="ItemsSelector"]
position = Vector2( 279, 125 )
rotation = 4.71239
scale = Vector2( 0.226236, 0.22119 )
texture = ExtResource( 4 )

[node name="item" type="Sprite" parent="ItemsSelector/slot_1"]
position = Vector2( 4.41986, -0.101074 )
rotation = 1.5708
scale = Vector2( 4.93798, 4.88267 )
texture = ExtResource( 20 )

[node name="frame" type="Sprite" parent="ItemsSelector/slot_1/item"]
position = Vector2( 0.0404358, -0.00486755 )
rotation = -1.5708
scale = Vector2( 0.76993, 0.775197 )
texture = ExtResource( 21 )

[node name="qty" type="Label" parent="ItemsSelector/slot_1/item"]
margin_left = 11.9022
margin_top = 8.57089
margin_right = 27.9022
margin_bottom = 22.5709
custom_fonts/font = SubResource( 17 )
text = "30"

[node name="PlayerBarControl" type="Control" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 656.0
margin_bottom = 91.0

[node name="LabelTotalGems" type="Label" parent="PlayerBarControl"]
margin_left = 160.0
margin_top = 40.0
margin_right = 368.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 5 )
text = "0"
valign = 1
autowrap = true

[node name="CircleItems" type="Sprite" parent="PlayerBarControl"]
visible = false
position = Vector2( 152, 112 )
scale = Vector2( -0.3, 0.3 )
texture = ExtResource( 4 )

[node name="ItemInCircleItems" type="Sprite" parent="PlayerBarControl"]
visible = false
position = Vector2( 152, 115 )
scale = Vector2( 1.5, 1.5 )

[node name="LabelQtySelectedItem" type="Label" parent="PlayerBarControl"]
visible = false
margin_left = 160.0
margin_top = 128.0
margin_right = 200.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 8 )

[node name="HPbar" type="TextureProgress" parent="PlayerBarControl"]
margin_left = 145.0
margin_top = 38.0
margin_right = 456.0
margin_bottom = 70.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
nine_patch_stretch = true

[node name="StamineBar" type="TextureProgress" parent="PlayerBarControl"]
margin_left = 147.0
margin_top = 65.0
margin_right = 457.0
margin_bottom = 84.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true

[node name="MPbar" type="TextureProgress" parent="PlayerBarControl"]
visible = false
margin_left = 128.0
margin_top = 48.0
margin_right = 624.0
margin_bottom = 56.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 11 )
nine_patch_stretch = true

[node name="Circle" type="Sprite" parent="PlayerBarControl"]
position = Vector2( 75.9814, 76 )
scale = Vector2( 0.456132, 0.446097 )
texture = ExtResource( 4 )

[node name="Avatar" type="Sprite" parent="PlayerBarControl"]
position = Vector2( 78.5, 77.829 )
scale = Vector2( 5.42308, 5.44486 )
texture = ExtResource( 3 )

[node name="HudBgWithoutCustomMeter" type="Sprite" parent="PlayerBarControl"]
position = Vector2( 288, 81 )
scale = Vector2( 1.8127, 1.82222 )
texture = ExtResource( 19 )

[node name="LvlLabel" type="Label" parent="PlayerBarControl"]
margin_left = 143.0
margin_top = 21.0
margin_right = 198.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "nivel"
align = 1
valign = 1

[node name="GuiLvlLabel" type="Label" parent="PlayerBarControl"]
margin_left = 187.0
margin_top = 11.0
margin_right = 227.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="IconGem" type="Node2D" parent="PlayerBarControl"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerBarControl/IconGem"]
autoplay = "gemIconAnimate"
anims/RESET = SubResource( 3 )
anims/gemIconAnimate = SubResource( 4 )

[node name="StrengthUp" type="Sprite" parent="PlayerBarControl"]
position = Vector2( 360.2, 99.8 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="SpeedUp" type="Sprite" parent="PlayerBarControl"]
position = Vector2( 400.2, 99.8 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 13 )

[node name="StamineUp" type="Sprite" parent="PlayerBarControl"]
position = Vector2( 440.2, 99.8 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 14 )

[node name="titleExp" type="Label" parent="PlayerBarControl"]
margin_left = 152.0
margin_top = 83.0
margin_right = 183.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 13 )
text = "exp:"
valign = 1

[node name="titleNextExp" type="Label" parent="PlayerBarControl"]
margin_left = 240.0
margin_top = 82.0
margin_right = 295.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 13 )
text = "sig:"
valign = 1

[node name="exp" type="Label" parent="PlayerBarControl"]
margin_left = 152.0
margin_top = 96.0
margin_right = 220.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 14 )
text = "0"
align = 2
valign = 1

[node name="nextexp" type="Label" parent="PlayerBarControl"]
margin_left = 240.0
margin_top = 96.0
margin_right = 300.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 14 )
text = "0"
align = 2
valign = 1

[node name="PopUpItem" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -576.0
margin_top = -168.0

[node name="Texture" type="TextureRect" parent="PopUpItem"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -304.0
margin_top = -88.0
margin_bottom = -16.0
texture = ExtResource( 5 )
expand = true

[node name="LabelItem" type="Label" parent="PopUpItem"]
margin_left = 288.0
margin_top = 104.0
margin_right = 563.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 7 )
text = "Cristal de vida
"

[node name="Label" type="Label" parent="PopUpItem"]
margin_left = 288.0
margin_top = 88.0
margin_right = 563.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 7 )
text = "Encontraste:"

[node name="BossBarControl" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -376.0
margin_top = -112.0
margin_right = 424.0
margin_bottom = -8.0

[node name="CircleBoss" type="Sprite" parent="BossBarControl"]
position = Vector2( 56, 56 )
scale = Vector2( 0.258484, 0.237918 )
texture = ExtResource( 4 )

[node name="HPBarBoss" type="TextureProgress" parent="BossBarControl"]
margin_left = 88.0
margin_top = 48.0
margin_right = 792.0
margin_bottom = 64.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
nine_patch_stretch = true

[node name="BackAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -21.809

[node name="BackAudio2" type="AudioStreamPlayer" parent="."]
pause_mode = 2
volume_db = -21.809

[node name="Pad" parent="." instance=ExtResource( 7 )]
position = Vector2( 11, 279 )

[node name="Js" type="Sprite" parent="."]
position = Vector2( 7, 6.00002 )
scale = Vector2( 0.015, 0.0130112 )
texture = ExtResource( 15 )

[node name="use-joystick" type="TouchScreenButton" parent="Js"]
position = Vector2( -1000, -896.667 )
scale = Vector2( 100, 100 )
shape = SubResource( 9 )

[node name="LevelUp" type="Node2D" parent="."]
visible = false
position = Vector2( -48, 104 )
rotation = -0.436332
script = ExtResource( 18 )

[node name="Label" type="Label" parent="LevelUp"]
margin_left = 190.0
margin_top = -17.0
margin_right = 730.0
margin_bottom = 71.0
rect_rotation = 24.9795
custom_colors/font_color = Color( 0.964706, 0.796078, 0.027451, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Sube de nivel"

[node name="Light2D" type="Light2D" parent="LevelUp/Label"]
position = Vector2( 275.078, 39.9094 )
scale = Vector2( 0.518507, 0.099431 )
texture = ExtResource( 16 )
color = Color( 0.701961, 0, 0, 1 )
energy = 2.0
range_height = -1465.5
shadow_color = Color( 0.839216, 0, 0.611765, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelUp"]
anims/RESET = SubResource( 11 )
anims/upd = SubResource( 12 )

[connection signal="pressed" from="Js/use-joystick" to="." method="_on_usejoystick_pressed"]
